/*
 * $Id: ChangeLog,v 1.503 2008-02-21 06:46:06 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-02-21 00:45 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_richeditbox.prg
    ! Forces repaint on ::Value and ::RichValue when control is
      inside a container.

2008-02-20 23:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_menu.ch
  * include/i_windefs.ch
  * source/h_menu.prg
    * Menu SEPARATOR is another control.
    + SUBCLASS clause added.
  * source/h_combo.prg
    ! Fixed incorrect LOSTFOCUS event processing via EN_KILLFOCUS.

2008-02-19 09:02 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_checkbox.prg
    ! Fixed default TRANSPARENT value at ::Define() method.

2008-02-17 20:43 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    ! Fixed BREAK warning.
  - source/c_textbox.c
  * source/common_make.bat
  * source/h_textbox.prg
  * source/makelib_bcc.bat
  * source/makelib_mingw.bat
    + Added "@2" and "@4" picture functions for DATE values.
    + Added "custom" date picture mask. "mm,yyyy,dd" picture works.
    + ::OnTextFilled property added. It's executed when user types
      last character of textbox's max length.
    * Moved C code from c_textbox.c to h_textbox.prg file.
    - c_textbox.c removed.
  * include/i_splitbox.ch
  * include/i_windefs.ch
  * source/h_splitbox.prg
    + FORCEBREAK command added.
    * Splitbox's container validation fixed.

2008-02-16 23:44 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    + ::ForceRow and ::ForceCol properties added.
    + ::TopMost property added.
  * source/h_controlmisc.prg
  * source/h_tab.prg
  * source/h_windows.prg
    * Fixed ::ContainerRow and ::ContainerCol values.
  * include/i_altsyntax.ch
  * include/i_hmg_compat.ch
  * include/minigui.ch